packages/pxweb2/src/app/app.module.scss
@use '$ui/style-dictionary/dist/scss/fixed-variables.scss' as fixed;

// Not from Figma
.navigationAndContentContainer {
  display: flex;
  flex-direction: row;

  // Tablet and mobile sizes
  @media (min-width: fixed.$breakpoints-xsmall-min-width) and (max-width: fixed.$breakpoints-small-max-width) {
    flex-direction: column-reverse;
  }
}

.mainContainer {
  --skip-to-main-content-height: 49px;

  display: flex;
  background: var(--px-color-surface-subtle);

  // Calculate height of main container, minus the header
  height: calc(100vh - fixed.$spacing-22);

  // xsmall and small
  @media (min-width: fixed.$breakpoints-xsmall-min-width) and (max-width: fixed.$breakpoints-small-max-width) {
    left: 0px;
    background: var(--px-color-surface-default);
    width: 100%;

    // Calculate height of main container, minus the header and navigation bar heights
    height: calc(100vh - fixed.$spacing-22 - fixed.$spacing-20);

    &.skipToMainContentVisible {
      // Calculate height of main container, minus the header and navigation bar and SkipToMainContent heights
      height: calc(
        100vh - fixed.$spacing-22 -
          fixed.$spacing-20 - var(--skip-to-main-content-height)
      );
    }
  }

  // medium, large and xlarge
  @media ((min-width: fixed.$breakpoints-medium-min-width) and (max-width: fixed.$breakpoints-large-max-width)) or ((min-width: fixed.$breakpoints-xlarge-min-width)) {
    width: calc(100% - 120px);
    justify-content: center;
    align-items: flex-start;
    flex-shrink: 0;

    // Handle rtl languages
    border-start-start-radius: var(--px-border-radius-xlarge);
    border-start-end-radius: var(--px-border-radius-none);
    border-end-end-radius: var(--px-border-radius-none);
    border-end-start-radius: var(--px-border-radius-none);

    padding: fixed.$spacing-6 fixed.$spacing-6 0px fixed.$spacing-6;
  }

  // xlarge
  @media (min-width: fixed.$breakpoints-xlarge-min-width) {
    padding: fixed.$spacing-10 fixed.$spacing-6 0px fixed.$spacing-6;
  }
}

.contentAndFooterContainer {
  // Not from Figma
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  width: 100%;
  max-width: 1320px;
  height: 100%;
  overflow-y: auto;
  scrollbar-width: thin;

  // xsmall
  @media (min-width: fixed.$breakpoints-xsmall-min-width) and (max-width: fixed.$breakpoints-xsmall-max-width) {
    padding-top: fixed.$spacing-4;
  }

  // xsmall and small
  @media (min-width: fixed.$breakpoints-small-min-width) and (max-width: fixed.$breakpoints-small-max-width) {
    padding-top: fixed.$spacing-6;
  }

  // medium, large and xlarge
  @media ((min-width: fixed.$breakpoints-medium-min-width) and (max-width: fixed.$breakpoints-large-max-width)) or ((min-width: fixed.$breakpoints-xlarge-min-width)) {
    padding-bottom: fixed.$spacing-6;
  }
}

